Add CRUD Catalogue + Data+buildingBlock

--- a/src/Services/Catalog/Catalog_API/Catalog_API.csproj
+++ b/src/Services/Catalog/Catalog_API/Catalog_API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>e758b7d0-31ba-45f2-aaa2-80e740b14000</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
